# libbspline

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/include/: bspline_utils.hpp
cpp/test/: 1d_bspline.cpp  3d_bspline.cpp
include/: trajectory_server.h
matlab/: b1_bspline_1d.m  b4_bspline_3d_function.m  c3_bspline_replanning.m
src/: trajectory_server.cpp
